Added Owner model. Added Owner service. Updated Dog Model. Updated views to match new model. Will need to delete User model, repo, service

--- a/dog-app/src/app/modules/dogs/dog-list/dog-list.component.css
+++ b/dog-app/src/app/modules/dogs/dog-list/dog-list.component.css
@@ -1,10 +1,8 @@
-.card {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-  }
+
+  mat-card img{
+    object-fit: cover;
+    height: 25vh;
+    }
   
   .card-content {
     text-align: center;
