--- a/dog-app/src/app/modules/dogs/dog-profile/dog-profile.component.css
+++ b/dog-app/src/app/modules/dogs/dog-profile/dog-profile.component.css
@@ -5,3 +5,20 @@
     flex-direction: column;
     align-items: center;
 }
+
+.image-container {
+    margin: 20px auto;
+    display: block;
+    position: relative;
+    border-radius: 100%;
+    height: 250px;
+    width: 250px;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    object-fit: cover;
+    object-position: center;
+}
