fix mapping data from api to app

--- a/dog-app/src/app/app.component.html
+++ b/dog-app/src/app/app.component.html
@@ -8,7 +8,7 @@
       <!-- Public Links -->
       <a routerLink="/" mat-list-item>Home</a>
       <a routerLink="/about" mat-list-item>About Us</a>
-      <a routerLink="/contact" mat-list-item>Contact</a>
+      <!-- <a routerLink="/contact" mat-list-item>Contact</a> -->
       <!-- User Links -->
       <ng-container *ngIf="currentOwner !== null">
         <mat-divider></mat-divider>
