--- a/dog-app/src/app/layout/navbar/navbar.component.html
+++ b/dog-app/src/app/layout/navbar/navbar.component.html
@@ -8,7 +8,7 @@
   
   <span *ngIf="isHandset || !(currentOwner$ | async) ">
     <a class="nav-link" *ngIf="!isHandset" routerLink="/about" routerLinkActive="active">About Us</a>
-    <a class="nav-link" *ngIf="!isHandset" routerLink="/contact" routerLinkActive="active">Contact</a>
+    <!-- <a class="nav-link" *ngIf="!isHandset" routerLink="/contact" routerLinkActive="active">Contact</a> -->
   </span>
 </div>
   <div class="toolbar-spacer"></div>
