--- a/dog-app/src/app/modules/owner/owner-dog-profile/owner-dog-profile.component.css
+++ b/dog-app/src/app/modules/owner/owner-dog-profile/owner-dog-profile.component.css
@@ -62,3 +62,19 @@
   right: 5px; 
   z-index: 2;
 }
+
+.button-container {
+  display:flex; 
+  flex-direction: row; 
+  flex-wrap: nowrap; 
+  justify-content: flex-end;
+}
+
+@media only screen and (min-width: 600px) {
+  .add-button {
+    position: absolute; 
+    top: -48px; 
+    right: 0; 
+    z-index: 2;
+  }
+}
