--- a/dog-app/src/app/public/home/home.component.html
+++ b/dog-app/src/app/public/home/home.component.html
@@ -7,7 +7,7 @@
 </div>
 <section class="content">
     <div class="image-container">
-        <img class="image"
+        <img class="image" alt="Dog photo"
             src="https://itsdogornothing.com/wp-content/uploads/2019/04/Great_Pyrenees_Cost_header-1024x640.jpg">
     </div>
     <div class="text-container">
@@ -30,6 +30,6 @@
         <a mat-raised-button routerLink="/about" color="primary">Find out more</a>
     </div>
     <div class="image-container">
-        <img class="image" src="https://thehappypuppysite.com/wp-content/uploads/2018/07/alaskan-malamute-long.jpg">
+        <img class="image" src="https://thehappypuppysite.com/wp-content/uploads/2018/07/alaskan-malamute-long.jpg" alt="Dog photo">
     </div>
 </section>
