--- a/dog-app/src/app/public/home/home.component.html
+++ b/dog-app/src/app/public/home/home.component.html
@@ -6,22 +6,21 @@
     <div class="overlay"></div>
 </div>
 <section class="content">
-    <div class="image-container">
+    <div class="image-container" style="margin-right: 5px;">
         <img class="image" alt="Dog photo"
             src="https://itsdogornothing.com/wp-content/uploads/2019/04/Great_Pyrenees_Cost_header-1024x640.jpg">
     </div>
-    <div class="text-container">
+    <div class="text-container" style="margin-left: 5px;">
         <h2>Unconditional Love</h2>
         <p>
             Dogs are social pack animals. They thrive off of attention and affection. They're often the ones who serve a
             wide variety of roles... best friend, protector, support. They're much more than a pet. And that's why we
             are here to help connect dogs with other dogs.
         </p>
-        <button mat-raised-button color="primary">Sign up now!</button>
     </div>
 </section>
 <section class="content">
-    <div class="text-container">
+    <div class="text-container" style="margin-right: 5px;">
         <h2>About Puppers</h2>
         <p>
             We realized how hard it was to find high quality dogs that will be best suited for your dog. So with
@@ -29,7 +28,7 @@
         </p>
         <a mat-raised-button routerLink="/about" color="primary">Find out more</a>
     </div>
-    <div class="image-container">
+    <div class="image-container" style="margin-left: 5px;">
         <img class="image" src="https://thehappypuppysite.com/wp-content/uploads/2018/07/alaskan-malamute-long.jpg" alt="Dog photo">
     </div>
 </section>
