--- a/dog-app/src/app/public/home/home.component.css
+++ b/dog-app/src/app/public/home/home.component.css
@@ -50,20 +50,29 @@
 .content {
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
-    padding: 20px 16px;
+    margin: 20px auto;
+    padding: 50px 16px;
     flex-direction: column;
     align-items: center;
 }
 
 .image-container {
-    margin: 10px;
+
     padding:10px;
     display: block;
     position: relative;
-height:100%;
-width:100%;
+    height:100%;
+    width:100%
 }
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
+}
+
 
 .image {
     width: 100%;
@@ -75,6 +84,7 @@ width:100%;
 @media only screen and (max-width: 768px) {
     .text-container {
         width:100%;
+        text-align: center
     }
 }
 
