--- a/dog-app/src/app/public/about/about.component.html
+++ b/dog-app/src/app/public/about/about.component.html
@@ -6,13 +6,17 @@
     <div class="overlay"></div>
 </div>
 <section class="content">
-    <div class="about-container" *ngFor="let member of members">
-        <div class="image-container">
-            <img src="https://via.placeholder.com/150" class="image" alt="Member photo">
+    <h1 class="mat-h1" style="font-size:2.6em; font-weight: 500;">Meet the Team</h1>
+    <p>We're a team of software engineers from Revature.</p>
+    <section class="flex-container">
+        <div class="wrapper" *ngFor="let member of members">
+            <div class="image-container">
+                <img [src]="member.photo" class="image" alt="Member photo">
+            </div>
+            <div style="text-align: center;">
+                <h2 class="mat-h2">{{member.name}}</h2>
+                <p>{{member.job}}</p>
+            </div>
         </div>
-        <div style="text-align: center;">
-            <h2>{{member.name}}</h2>
-            <p>{{member.job}}</p>
-        </div>
-    </div>
+    </section>
 </section>
