--- a/dog-app/src/app/public/login/login.component.html
+++ b/dog-app/src/app/public/login/login.component.html
@@ -20,7 +20,7 @@
                 </button>
             </mat-form-field>
             <div class="link-btns">
-                <a mat-button routerLink="/forgot-password" class="link-btn" color="primary">Forget Password?</a>
+                <a mat-button routerLink="/forgot-password" class="link-btn" color="primary">Forgot Password?</a>
 
                 <div style="text-align: center;">Don't have an account yet? <a mat-button routerLink="/register"
                         class="link-btn" color="primary">Create one</a></div>
