--- a/dog-app/src/app/app.component.css
+++ b/dog-app/src/app/app.component.css
@@ -17,6 +17,7 @@
 mat-sidenav-content {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .mat-toolbar.mat-primary {
@@ -28,4 +29,10 @@ mat-sidenav-content {
 main {
   flex-grow: 1;
   position: relative;
+}
+
+app-navbar {
+  position: sticky;
+  top: 0;
+  z-index: 99;
 }
